fix whitespace

--- a/src/content-handlers/iiif/modules/uv-shared-module/css/right-panel.less
+++ b/src/content-handlers/iiif/modules/uv-shared-module/css/right-panel.less
@@ -4,8 +4,6 @@
 
     .rightPanel {
 
-        width: 70px;
-
         z-index: 10;
 
         .top {
